Use layer->channelFlags in libkis Channel.cpp to correctly retrieve the current channel visibility

BUG:432226